<resources>
    <string name="app_name">HotelPortal</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_searching_hotel">SearchingHotel</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="gps_location">GPS Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
</resources>
